// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
  id="default"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.alt - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
  id="properties.alt"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.color - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{\\"backgroundColor\\":\\"#f12345\\"},null]} ant-avatar-circle"
  id="properties.color"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.content - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
  id="properties.content"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    Avatar
  </span>
</span>
`;

exports[`Render properties.content - value[0] 2`] = `
<span
  className="ant-avatar {\\"style\\":[{},{\\"border\\":\\"1px solid red\\"}]} ant-avatar-circle"
  id="properties.content"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    Avatar
  </span>
</span>
`;

exports[`Render properties.gap - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
  id="properties.gap"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    Avatar
  </span>
</span>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle ant-avatar-icon"
  id="properties.icon object"
  onClick={[Function]}
  style={Object {}}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{\\"color\\":\\"red\\"},null]}"
    id="properties.icon object_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle ant-avatar-icon"
  id="properties.icon string"
  onClick={[Function]}
  style={Object {}}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
    id="properties.icon string_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Render properties.icon string properties.shape square - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-square ant-avatar-icon"
  id="properties.icon string properties.shape square"
  onClick={[Function]}
  style={Object {}}
>
  <span
    aria-label="loading-3-quarters"
    className="anticon anticon-loading-3-quarters anticon-spin {\\"style\\":[{},null]}"
    id="properties.icon string properties.shape square_icon"
    required={false}
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Render properties.shape - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-square"
  id="properties.shape"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.size 40 - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-circle"
  id="properties.size 40"
  onClick={[Function]}
  style={
    Object {
      "fontSize": 18,
      "height": 40,
      "lineHeight": "40px",
      "width": 40,
    }
  }
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.size large - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-lg ant-avatar-circle"
  id="properties.size large"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.size small - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{},null]} ant-avatar-sm ant-avatar-circle"
  id="properties.size small"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ant-avatar-string"
    style={
      Object {
        "opacity": 0,
      }
    }
  />
</span>
`;

exports[`Render properties.src - value[0] 1`] = `
<span
  className="ant-avatar {\\"style\\":[{\\"backgroundColor\\":false},null]} ant-avatar-circle ant-avatar-image"
  id="properties.src"
  onClick={[Function]}
  style={Object {}}
>
  <img
    onError={[Function]}
    src="https://docs.lowdefy.com/images/favicon.png"
  />
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.alt 1`] = `true`;

exports[`Test Schema properties.alt 2`] = `null`;

exports[`Test Schema properties.color 1`] = `true`;

exports[`Test Schema properties.color 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.content 3`] = `true`;

exports[`Test Schema properties.content 4`] = `null`;

exports[`Test Schema properties.gap 1`] = `true`;

exports[`Test Schema properties.gap 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.icon string properties.shape square 1`] = `true`;

exports[`Test Schema properties.icon string properties.shape square 2`] = `null`;

exports[`Test Schema properties.shape 1`] = `true`;

exports[`Test Schema properties.shape 2`] = `null`;

exports[`Test Schema properties.size 40 1`] = `true`;

exports[`Test Schema properties.size 40 2`] = `null`;

exports[`Test Schema properties.size large 1`] = `true`;

exports[`Test Schema properties.size large 2`] = `null`;

exports[`Test Schema properties.size small 1`] = `true`;

exports[`Test Schema properties.size small 2`] = `null`;

exports[`Test Schema properties.src 1`] = `true`;

exports[`Test Schema properties.src 2`] = `null`;
